@@ -1,24 +1,26 @@
 package com.trilight.ocr.controller.purchase;
 
 import cn.hutool.core.bean.BeanUtil;
-import com.alibaba.excel.EasyExcel;
+import com.alibaba.excel.EasyExcelFactory;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.trilight.ocr.common.model.PageQuery;
 import com.trilight.ocr.common.model.PageResult;
 import com.trilight.ocr.common.model.R;
 import com.trilight.ocr.model.dto.purchase.VATInvoiceDTO;
+import com.trilight.ocr.model.dto.purchase.VATInvoiceExcelDTO;
 import com.trilight.ocr.model.pojo.VATInvoiceDO;
 import com.trilight.ocr.service.purchase.VATInvoiceService;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
-import org.springframework.util.StringUtils;
+import org.springframework.util.ObjectUtils;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.util.List;
 
@@ -36,8 +38,10 @@ public class VATInvoiceController {
     }
 
     @GetMapping("page")
-    public PageResult<VATInvoiceDTO> pageVATInvoice(PageQuery pageQuery, VATInvoiceDTO vatInvoiceDTO) {
-        return vatInvoiceService.pageVATInvoice(pageQuery, vatInvoiceDTO);
+    public PageResult<VATInvoiceDTO> pageVATInvoice(PageQuery pageQuery, VATInvoiceDTO vatInvoiceDTO,
+                                                    @RequestParam(required = false) LocalDate startDate,
+                                                    @RequestParam(required = false) LocalDate endDate) {
+        return vatInvoiceService.pageVATInvoice(pageQuery, vatInvoiceDTO, startDate, endDate);
     }
 
     @PutMapping("/{vatInvoiceId}")
@@ -48,7 +52,7 @@ public class VATInvoiceController {
 
     @DeleteMapping("/{vatInvoiceId}")
     public R<Void> deleteVATInvoice(@PathVariable Long vatInvoiceId) {
-         vatInvoiceService.removeById(vatInvoiceId);
+        vatInvoiceService.removeById(vatInvoiceId);
         return R.ok();
     }
 
@@ -64,20 +68,20 @@ public class VATInvoiceController {
         // 设置响应头
         response.setContentType("application/vnd.ms-excel");
         response.setCharacterEncoding("utf-8");
-        String fileName = URLEncoder.encode("采购发票", "UTF-8").replaceAll("\\+", "%20");
+        String fileName = URLEncoder.encode("采购发票", StandardCharsets.UTF_8).replace("\\+", "%20");
         response.setHeader("Content-Disposition", "attachment;filename=" + fileName + ".xlsx");
 
         List<VATInvoiceDO> vatInvoiceDOList = vatInvoiceService.list(new QueryWrapper<VATInvoiceDO>()
-                .like(!StringUtils.hasLength(invoiceNum), "invoice_num", invoiceNum)
-                .like(!StringUtils.hasLength(sellerName), "seller_name", sellerName)
-                .like(!StringUtils.hasLength(purchaserName), "purchaser_name", purchaserName)
+                .like(!ObjectUtils.isEmpty(invoiceNum), "invoice_num", invoiceNum)
+                .like(!ObjectUtils.isEmpty(sellerName), "seller_name", sellerName)
+                .like(!ObjectUtils.isEmpty(purchaserName), "purchaser_name", purchaserName)
                 .ge(startDate != null, "invoice_date", startDate)
                 .le(endDate != null, "invoice_date", endDate)
         );
 
-        List<VATInvoiceDTO> vatInvoiceDTOList = BeanUtil.copyToList(vatInvoiceDOList, VATInvoiceDTO.class);
+        List<VATInvoiceExcelDTO> vatInvoiceDTOList = BeanUtil.copyToList(vatInvoiceDOList, VATInvoiceExcelDTO.class);
 
-        // 使用 EasyExcel 导出数据
-        EasyExcel.write(response.getOutputStream(), VATInvoiceDTO.class).sheet("采购发票").doWrite(vatInvoiceDTOList);
+        EasyExcelFactory.write(response.getOutputStream(), VATInvoiceExcelDTO.class).sheet("采购发票")
+                .doWrite(vatInvoiceDTOList);
     }
 }
